# tg_job_RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ingestion.py  main.py  monitoring.py  pyproject.toml
src/: ingestion.py  monitoring.py  query.py  tg_export_parser.py
